force-app/main/default/objects/PartialRenewalSteps__c/PartialRenewalSteps__c.object-meta.xml
<CustomObject>
    <label>Step de Renovação Parcial</label>
    <nameField>
        <label>Nome do Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Steps de Renovação Parcial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>