force-app/main/default/objects/PartialRenewalSteps__c/fields/DataPack__c.field-meta.xml
<CustomField>
    <fullName>DataPack__c</fullName>
    <label>Franquia de Dados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>