force-app/main/default/objects/PartialRenewalSteps__c/fields/DurationDays__c.field-meta.xml
<CustomField>
    <fullName>DurationDays__c</fullName>
    <label>Duração em dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>