force-app/main/default/objects/PartialRenewalSteps__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Preço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>