force-app/main/default/objects/PartialRenewalSteps__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Código de Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>