force-app/main/default/objects/PartialRenewalSteps__c/fields/StepNumber__c.field-meta.xml
<CustomField>
    <fullName>StepNumber__c</fullName>
    <label>Número do Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>